# neural-network-test

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.ps1  build_and_run.ps1  extract_mnist_png.ps1  extract_mnist_png.sh  run.ps1
data/: .gitignore
source/: main.cpp
source/DataCollection/: DataCollection.cpp  DataCollection.h
source/NetworkStructure/: NeuralNetwork.cpp  NeuralNetwork.h  Neuron.cpp  Neuron.h  NeuronConnection.cpp  NeuronConnection.h  NeuronLayer.cpp  NeuronLayer.h
source/TrainingDataCollection/: TrainingDataCollection.cpp  TrainingDataCollection.h
source/UserInterface/: CommandLineInterface.cpp  CommandLineInterface.h
